--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Taller 1</title>
+        <title>Taller 2</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
             integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="lib/style.css" />
+        <script type="module" src="./scripts/student.js"></script>
+        <script type="module" src="./scripts/dataStudent.js"></script>
         <script type="module" src="./scripts/course.js"></script>
         <script type="module" src="./scripts/dataCourses.js"></script>
         <script type="module" src="./scripts/main.js"></script>
@@ -20,9 +22,9 @@
     <div class="container">
         <div class="row">
 
-            <div class="col">
+            <div class="col" >
                 <div >
-                    <h1>Nicolás Esteban Calero</h1>
+                    <h1 id="student_name"></h1>
                     <img class="img-fluid max-width: 100% height: auto" src="./cale.jfif" alt="Avatar">`
 
                 </div>
@@ -30,27 +32,8 @@
                     <div class="space">
                         <table class="table ">
                             <h3>Datos Personales</h3>
-                            <tbody>
-                                <tr>
-                                    <td>Código</td>
-                                    <td>201820798</td>
-                                </tr>
-                                <tr>
-                                    <td>Cédula</td>
-                                    <td>123123123</td>
-                                </tr>
-                                <tr>
-                                    <td>Edad</td>
-                                    <td>20 Años</td>
-                                </tr>
-                                <tr>
-                                    <td>Dirección</td>
-                                    <td>Calle falsa 123</td>
-                                </tr>
-                                <tr>
-                                    <td>Teléfono</td>
-                                    <td>018002500</td>
-                                </tr>
+                            <tbody id="student_data">
+                                
                             </tbody>
                         </table>
 
