Se implementa la funcion de filtrar por numero minimo y maximo de creditos, se añaden cursos falsos para la prueba de esta funcionalidad

--- a/index.html
+++ b/index.html
@@ -61,20 +61,26 @@
                                         <label for="exampleFormControlSelect1">
                                             Creditos minimos:
                                         </label>
-                                        <select class="form-control minimo" id="exampleFormControlSelect1">
+                                        <select class="form-control minimo" id="exampleFormControlSelect1_min">
                                             <option>1</option>
                                             <option>2</option>
                                             <option>3</option>
+                                            <option>4</option>
+                                            <option>5</option>
+                                            <option>6</option>
                                         </select>
                                     </div>
                                     <div class="col">
                                         <label for="exampleFormControlSelect1">
                                             Creditos maximos:
                                         </label>
-                                        <select class="form-control maximo" id="exampleFormControlSelect1">
+                                        <select class="form-control maximo" id="exampleFormControlSelect1_max">
                                             <option>1</option>
                                             <option>2</option>
                                             <option>3</option>
+                                            <option>4</option>
+                                            <option>5</option>
+                                            <option>6</option>
                                         </select>
                                     </div>
                                     
